2009-02-02  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-window-manager.c (mb_adjust_dialog_title_position):
	  Don't make the decor dirty if the old and new positions are the same.
	* matchbox/core/mb-wm-stack.h
	* matchbox/core/mb-wm-stack.c:
	  Made mb_wm_stack_dump() more handy.

	* mb_wm_handle_root_config_notify():
	  Tell the cmgr the screen size has changed.
	* matchbox/comp-mgr/mb-wm-comp-mgr.h:
	  New virtual method screen_size_changed().
	  Warrants a version bump.
	* matchbox/comp_mgr/mb-wm-comp-mgr-clutter.c
	  (mb_wm_comp_mgr_clutter_turn_on_real):
	  Set the size of the overlay window correctly.
	  (mb_wm_comp_mgr_clutter_screen_size_changed):
	  Keep the root window, the stage and the overlay window size in sync.

2009-02-02  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_map_notify_real): Add override-redirect
	windows to the texture corruption workaround list to fix drop down
	menus and such.

2009-01-31  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-root-window.c
	(mb_wm_root_window_handle_message): Print a line when a ping reply is
	received (currently this never seems to happen).
	* matchbox/core/mb-window-manager.c (mb_wm_handle_unmap_notify): If
	the client unmaps its window and that is being pinged, regard it as
	responding to the ping.
	(mb_wm_handle_hang_client): Stop the ping process if it is ongoing.
	* matchbox/core/mb-wm-client.c (mb_wm_client_ping_timeout_cb): Call
	mb_wm_handle_hang_client instead of mb_wm_client_shutdown on ping
	timeout. This way the user can decide whether or not the client should
	be killed.
	(mb_wm_client_shutdown): Print debug when we kill a client.

2009-01-29  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-client-base.c
	(mb_wm_client_move_to_top_recursive): New function.
	(mb_wm_client_base_stack): Handle transient chain correctly, so that